--- a/데이터 전처리.ipynb
+++ b/데이터 전처리.ipynb
@@ -132,6 +132,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "573abb30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target='Survived'\n",
+    "\n",
+    "x = data.drop(target, axis=1)\n",
+    "y = data[target]\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3c01adaa",
    "metadata": {},
@@ -1872,6 +1889,136 @@
     "                                               'C':1,\n",
     "                                               'Q':2})\n",
     "data_co"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccf7df8c",
+   "metadata": {},
+   "source": [
+    "## 정규화"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "203487ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.271174</td>\n",
+       "      <td>0.014151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.472229</td>\n",
+       "      <td>0.139136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.321438</td>\n",
+       "      <td>0.015469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.434531</td>\n",
+       "      <td>0.103644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.434531</td>\n",
+       "      <td>0.015713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>0.334004</td>\n",
+       "      <td>0.025374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>0.233476</td>\n",
+       "      <td>0.058556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.045771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>0.321438</td>\n",
+       "      <td>0.058556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>0.396833</td>\n",
+       "      <td>0.015127</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>891 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Age      Fare\n",
+       "0    0.271174  0.014151\n",
+       "1    0.472229  0.139136\n",
+       "2    0.321438  0.015469\n",
+       "3    0.434531  0.103644\n",
+       "4    0.434531  0.015713\n",
+       "..        ...       ...\n",
+       "886  0.334004  0.025374\n",
+       "887  0.233476  0.058556\n",
+       "888       NaN  0.045771\n",
+       "889  0.321438  0.058556\n",
+       "890  0.396833  0.015127\n",
+       "\n",
+       "[891 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_co = data.copy()\n",
+    "\n",
+    "cols = ['Age', 'Fare']\n",
+    "data_co[cols] = (data_co[cols] - data_co[cols].min()) / (data_co[cols].max() - data_co[cols].min())\n",
+    "data_co[cols]"
    ]
   },
   {
